--- a/assets/css/extended/main.css
+++ b/assets/css/extended/main.css
@@ -37,7 +37,7 @@ html {
 }
 a {
     text-decoration: underline var(--underline-link);
-    /* text-underline-offset: 3px; */
+    text-underline-offset: 2px;
 }
 
 a:hover {
@@ -116,6 +116,7 @@ body {
 
 @media screen and (max-width: 768px) {
     .main {
+        display: block;
         flex-wrap: wrap;
         overflow: visible;
         padding: var(--small-main-padding)
